--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <button id="btnStart">开始游戏</button>
+    <!-- <button id="btnStart">开始游戏</button> -->
     <div id="app"></div>
     <script type="module" src="/src/index.ts"></script>
   </body>
