--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
   </head>
   <body>
     <!-- <button id="btnStart">开始游戏</button> -->
+    <input
+      type="text"
+      id="input-box"
+      style="display: none"
+      placeholder="Type something..."
+    />
     <div id="app"></div>
+
     <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
